fix: use inline-block on #number-format in order to make the spacing system actually work + skeleton prop fix

--- a/packages/dnb-eufemia/src/components/number-format/style/_number-format.scss
+++ b/packages/dnb-eufemia/src/components/number-format/style/_number-format.scss
@@ -6,6 +6,7 @@
 @import '../../../style/elements/_anchor-mixins.scss';
 
 .dnb-number-format {
+  display: inline-block;
   position: relative;
   speak-as: numbers;
   color: inherit;
